test/spec_vectors/simd_f32x4_arith/fail/module_15.wat
(module (func $f32x4.mul-arg-empty (result v128) (f32x4.mul)))